# gigashop

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  manage.py  nginx.conf  pyproject.toml
cart/: cart.py  context_processors.py  forms.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
cart/templatetags/: cart_tags.py
docker/: entrypoint.sh
gigashop/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_productsize_product.py
main/templates/main/: base.html  product_detail.html
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_rename_payment_order_payment_provider.py  0003_rename_stripe_payment_intend_id_order_stripe_payment_intent_id.py
orders/templates/orders/: checkout_content.html
orders/templates/orders/partials/: summary.html
payment/: views.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_address_customuser_address2.py
users/templates/users/: profile.html
