[project]
name = "gigashop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.11.0",
    "django==6.0.2",
    "pillow==12.1.0",
    "psycopg2==2.9.11",
    "python-dotenv==1.2.1",
    "sqlparse==0.5.5",
    "tzdata==2025.3",
]
