[project]
name = "gigashop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.0",
    "django==6.0.2",
    "gunicorn==23.0.0",
    "pillow==12.1.0",
    "psycopg2==2.9.11",
    "python-dotenv==1.2.1",
    "ruff>=0.15.0",
    "sqlparse==0.5.5",
    "tzdata==2025.3",
]

[tool.ruff]
fix = true